website/versioned_docs/version-0.75.0/alphabetic.md
---
title: All Commands
sidebar_label: Alphabetical Index
id: version-0.75.0-alphabetic
original_id: alphabetic
---

- [add](add.md)
- [addNote](addNote.md)
- [addRemote](addRemote.md)
- [annotatedTag](annotatedTag.md)
- [branch](branch.md)
- [checkout](checkout.md)
- [clone](clone.md)
- [commit](commit.md)
- [config](config.md)
- [currentBranch](currentBranch.md)
- [deleteBranch](deleteBranch.md)
- [deleteRef](deleteRef.md)
- [deleteRemote](deleteRemote.md)
- [deleteTag](deleteTag.md)
- [expandOid](expandOid.md)
- [expandRef](expandRef.md)
- [fastCheckout](fastCheckout.md)
- [fetch](fetch.md)
- [findRoot](findRoot.md)
- [getRemoteInfo](getRemoteInfo.md)
- [hashBlob](hashBlob.md)
- [indexPack](indexPack.md)
- [init](init.md)
- [isDescendent](isDescendent.md)
- [listBranches](listBranches.md)
- [listFiles](listFiles.md)
- [listNotes](listNotes.md)
- [listTags](listTags.md)
- [listRemotes](listRemotes.md)
- [log](log.md)
- [merge](merge.md)
- [packObjects](packObjects.md)
- [pull](pull.md)
- [push](push.md)
- [readBlob](readBlob.md)
- [readCommit](readCommit.md)
- [readNote](readNote.md)
- [readObject](readObject.md)
- [readTag](readTag.md)
- [readTree](readTree.md)
- [remove](remove.md)
- [removeNote](removeNote.md)
- [resetIndex](resetIndex.md)
- [resolveRef](resolveRef.md)
- [sign](sign.md) [deprecated]
- [STAGE](./STAGE.md)
- [status](status.md)
- [statusMatrix](statusMatrix.md)
- [tag](tag.md)
- [TREE](./TREE.md)
- [utils.auth](utils_auth.md) [deprecated]
- [utils.oauth2](utils_oauth2.md) [deprecated]
- [verify](verify.md)
- [version](version.md)
- [walkBeta2](walkBeta2.md)
- [WORKDIR](./WORKDIR.md)
- [writeBlob](writeBlob.md)
- [writeCommit](writeCommit.md)
- [writeObject](writeObject.md)
- [writeTag](writeTag.md)
- [writeTree](writeTree.md)
- [writeRef](writeRef.md)

# Plugins

- [credentialManager](plugin_credentialManager.md)
- [emitter](plugin_emitter.md)
- [fs](plugin_fs.md)
- [http](plugin_http.md)
- [pgp](plugin_pgp.md)

# Errors
(added here so Algolia indexes the page)
- [Error Code Index](errors.md)
